la fonction d'initialisation

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -81,7 +81,11 @@
    "id": "2563343d-174d-42e1-af7c-aa2027a5f9f8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def initialisation(x):\n",
+    "    w = np.random.randn(x.shape[1], 1)\n",
+    "    b = np.ran"
+   ]
   }
  ],
  "metadata": {
