test de la fonction d'initialisation

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -77,14 +77,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "id": "2563343d-174d-42e1-af7c-aa2027a5f9f8",
    "metadata": {},
    "outputs": [],
    "source": [
     "def initialisation(x):\n",
     "    w = np.random.randn(x.shape[1], 1)\n",
-    "    b = np.ran"
+    "    b = np.random.randn(1)\n",
+    "    return (w, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7b61a05d-c079-493b-a5f4-d97656def584",
+   "metadata": {},
+   "source": [
+    "## Testons la Fonction d'Initialisation"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "79fd44eb-99e4-47ff-96b7-d874da91f3e1",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "w, b = initialisation(X)\n",
+    "print()"
    ]
   }
  ],
