--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -98,14 +98,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "id": "79fd44eb-99e4-47ff-96b7-d874da91f3e1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "La taille de w: (2, 1)\n",
+      "La taille de b: (1,)\n",
+      "w: [[0.1209924 ]\n",
+      " [0.59993257]]\n",
+      "b:[-0.13546653]\n"
+     ]
+    }
+   ],
    "source": [
     "w, b = initialisation(X)\n",
-    "print()"
+    "print(f'La taille de w: {w.shape}')\n",
+    "print(f'La taille de b: {b.shape}')\n",
+    "\n",
+    "print(f'w: {w}\\nb:{b}')"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a621070a-5117-436a-9246-ad1c22dd7266",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
