création de la fonction sigmoïd

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -123,12 +123,32 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "fbd03a91-71a3-4c00-ac05-822ca0b50101",
+   "metadata": {},
+   "source": [
+    "## Création du Modèle\n",
+    "![image](model.png)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1f0168a1-123c-4345-b20d-0879b3903682",
+   "metadata": {},
+   "source": [
+    "### Création de la Fonction Sigmoïd"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "a621070a-5117-436a-9246-ad1c22dd7266",
+   "id": "b6e54792-f2a6-42ca-9b48-0f884f3bb989",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def sigmoid(z):\n",
+    "    retur"
+   ]
   }
  ],
  "metadata": {
