création du modèle

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -141,13 +141,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "id": "b6e54792-f2a6-42ca-9b48-0f884f3bb989",
    "metadata": {},
    "outputs": [],
    "source": [
     "def sigmoid(z):\n",
-    "    retur"
+    "    return (1/(1+np.exp(-z)))"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "78fceb89-321b-4ee0-816f-70c9290f290f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def model(x, w, b):\n",
+    "    z = "
    ]
   }
  ],
