--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -152,14 +152,161 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "78fceb89-321b-4ee0-816f-70c9290f290f",
    "metadata": {},
    "outputs": [],
    "source": [
     "def model(x, w, b):\n",
-    "    z = "
+    "    Z = x.dot(w) + b\n",
+    "    A = sigmoid(Z)\n",
+    "    return A"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "897875a5-32d0-430a-89bb-aaaa2d31137b",
+   "metadata": {},
+   "source": [
+    "## Testons le Modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "id": "40258df5-126e-48dd-ab71-2e00db441d8e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape de A: (100, 1)\n"
+     ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "array([[0.84752305],\n",
+       "       [0.5622369 ],\n",
+       "       [0.94682369],\n",
+       "       [0.78055049],\n",
+       "       [0.72822383],\n",
+       "       [0.84544798],\n",
+       "       [0.92113548],\n",
+       "       [0.85478236],\n",
+       "       [0.91184811],\n",
+       "       [0.53515516],\n",
+       "       [0.93190588],\n",
+       "       [0.61383545],\n",
+       "       [0.9599116 ],\n",
+       "       [0.92315626],\n",
+       "       [0.75039803],\n",
+       "       [0.81857301],\n",
+       "       [0.53498553],\n",
+       "       [0.90615507],\n",
+       "       [0.55369427],\n",
+       "       [0.70725763],\n",
+       "       [0.94322755],\n",
+       "       [0.92828486],\n",
+       "       [0.8157728 ],\n",
+       "       [0.95092558],\n",
+       "       [0.64842862],\n",
+       "       [0.94259361],\n",
+       "       [0.51645051],\n",
+       "       [0.97435205],\n",
+       "       [0.94366861],\n",
+       "       [0.81511113],\n",
+       "       [0.50942917],\n",
+       "       [0.94014717],\n",
+       "       [0.63400019],\n",
+       "       [0.51097161],\n",
+       "       [0.84664502],\n",
+       "       [0.93081764],\n",
+       "       [0.64319303],\n",
+       "       [0.84175923],\n",
+       "       [0.87671503],\n",
+       "       [0.67588344],\n",
+       "       [0.83003213],\n",
+       "       [0.97420919],\n",
+       "       [0.97148858],\n",
+       "       [0.90047175],\n",
+       "       [0.84235362],\n",
+       "       [0.74132854],\n",
+       "       [0.4865564 ],\n",
+       "       [0.44621744],\n",
+       "       [0.93370422],\n",
+       "       [0.9626458 ],\n",
+       "       [0.56015438],\n",
+       "       [0.65825545],\n",
+       "       [0.97980878],\n",
+       "       [0.95398369],\n",
+       "       [0.87726038],\n",
+       "       [0.94380855],\n",
+       "       [0.87909834],\n",
+       "       [0.64728201],\n",
+       "       [0.72199415],\n",
+       "       [0.44183073],\n",
+       "       [0.72723215],\n",
+       "       [0.93013639],\n",
+       "       [0.95553988],\n",
+       "       [0.72661884],\n",
+       "       [0.96936598],\n",
+       "       [0.85183595],\n",
+       "       [0.89206466],\n",
+       "       [0.90063467],\n",
+       "       [0.76457134],\n",
+       "       [0.90238219],\n",
+       "       [0.88993878],\n",
+       "       [0.53824407],\n",
+       "       [0.80553728],\n",
+       "       [0.93878719],\n",
+       "       [0.80699467],\n",
+       "       [0.90638457],\n",
+       "       [0.71819345],\n",
+       "       [0.78233122],\n",
+       "       [0.90379818],\n",
+       "       [0.94365129],\n",
+       "       [0.8446775 ],\n",
+       "       [0.91254098],\n",
+       "       [0.95223372],\n",
+       "       [0.93875737],\n",
+       "       [0.85748222],\n",
+       "       [0.93633913],\n",
+       "       [0.66225457],\n",
+       "       [0.96877579],\n",
+       "       [0.61726009],\n",
+       "       [0.64486449],\n",
+       "       [0.77541962],\n",
+       "       [0.5902119 ],\n",
+       "       [0.77055236],\n",
+       "       [0.40226557],\n",
+       "       [0.93228482],\n",
+       "       [0.93387969],\n",
+       "       [0.31864149],\n",
+       "       [0.69405384],\n",
+       "       [0.90393546],\n",
+       "       [0.73302707]])"
+      ]
+     },
+     "execution_count": 19,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "A = model(X, w, b)\n",
+    "print(f'Shape de A: {A.shape}')\n",
+    "A"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "94dafe38-809d-4050-aa94-24cdd8fbf481",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
