la fonction log loss

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -147,7 +147,7 @@
    "outputs": [],
    "source": [
     "def sigmoid(z):\n",
-    "    return (1/(1+np.exp(-z)))"
+    "    return 1/(1+np.exp(-z))"
    ]
   },
   {
@@ -301,9 +301,69 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "8817d492-497b-467a-8898-c6262a83e581",
+   "metadata": {},
+   "source": [
+    "## La Fonction Coût de Notre Modèle\n",
+    "![image](fonction_cout.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 28,
+   "id": "49b43e89-9b00-452f-b37c-782250789a21",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def log_loss(A, y):\n",
+    "    L = (1/len(y)) * np.sum(-y * np.log(A) - (1-y) * np.log(1-A))\n",
+    "    return L"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 29,
+   "id": "1a532dde-f864-4c06-af3d-5777df93669b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "loss = log_loss(A, y)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 30,
+   "id": "233df620-8c39-47a2-8ce8-cb0c6ed9d09c",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "1.5471000139152558"
+      ]
+     },
+     "execution_count": 30,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "loss"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "94dafe38-809d-4050-aa94-24cdd8fbf481",
+   "id": "4abdb39b-6831-4c34-ae3d-ec66b1c3d02c",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e7ad3092-0104-4365-b090-5e3cea72fb3b",
    "metadata": {},
    "outputs": [],
    "source": []
