python/gradients.png

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 40,
    "id": "0f9be449-d291-4e0b-bf62-58cfbceb59c8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 41,
    "id": "9993b8d0-667d-4626-b943-0f8063856e0b",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 42,
    "id": "2563343d-174d-42e1-af7c-aa2027a5f9f8",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 43,
    "id": "79fd44eb-99e4-47ff-96b7-d874da91f3e1",
    "metadata": {},
    "outputs": [
@@ -108,9 +108,9 @@
      "text": [
       "La taille de w: (2, 1)\n",
       "La taille de b: (1,)\n",
-      "w: [[0.1209924 ]\n",
-      " [0.59993257]]\n",
-      "b:[-0.13546653]\n"
+      "w: [[ 0.86750878]\n",
+      " [-1.23279015]]\n",
+      "b:[0.89651975]\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 15,
+   "execution_count": 44,
    "id": "b6e54792-f2a6-42ca-9b48-0f884f3bb989",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": 45,
    "id": "78fceb89-321b-4ee0-816f-70c9290f290f",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 46,
    "id": "40258df5-126e-48dd-ab71-2e00db441d8e",
    "metadata": {},
    "outputs": [
@@ -187,109 +187,109 @@
     {
      "data": {
       "text/plain": [
-       "array([[0.84752305],\n",
-       "       [0.5622369 ],\n",
-       "       [0.94682369],\n",
-       "       [0.78055049],\n",
-       "       [0.72822383],\n",
-       "       [0.84544798],\n",
-       "       [0.92113548],\n",
-       "       [0.85478236],\n",
-       "       [0.91184811],\n",
-       "       [0.53515516],\n",
-       "       [0.93190588],\n",
-       "       [0.61383545],\n",
-       "       [0.9599116 ],\n",
-       "       [0.92315626],\n",
-       "       [0.75039803],\n",
-       "       [0.81857301],\n",
-       "       [0.53498553],\n",
-       "       [0.90615507],\n",
-       "       [0.55369427],\n",
-       "       [0.70725763],\n",
-       "       [0.94322755],\n",
-       "       [0.92828486],\n",
-       "       [0.8157728 ],\n",
-       "       [0.95092558],\n",
-       "       [0.64842862],\n",
-       "       [0.94259361],\n",
-       "       [0.51645051],\n",
-       "       [0.97435205],\n",
-       "       [0.94366861],\n",
-       "       [0.81511113],\n",
-       "       [0.50942917],\n",
-       "       [0.94014717],\n",
-       "       [0.63400019],\n",
-       "       [0.51097161],\n",
-       "       [0.84664502],\n",
-       "       [0.93081764],\n",
-       "       [0.64319303],\n",
-       "       [0.84175923],\n",
-       "       [0.87671503],\n",
-       "       [0.67588344],\n",
-       "       [0.83003213],\n",
-       "       [0.97420919],\n",
-       "       [0.97148858],\n",
-       "       [0.90047175],\n",
-       "       [0.84235362],\n",
-       "       [0.74132854],\n",
-       "       [0.4865564 ],\n",
-       "       [0.44621744],\n",
-       "       [0.93370422],\n",
-       "       [0.9626458 ],\n",
-       "       [0.56015438],\n",
-       "       [0.65825545],\n",
-       "       [0.97980878],\n",
-       "       [0.95398369],\n",
-       "       [0.87726038],\n",
-       "       [0.94380855],\n",
-       "       [0.87909834],\n",
-       "       [0.64728201],\n",
-       "       [0.72199415],\n",
-       "       [0.44183073],\n",
-       "       [0.72723215],\n",
-       "       [0.93013639],\n",
-       "       [0.95553988],\n",
-       "       [0.72661884],\n",
-       "       [0.96936598],\n",
-       "       [0.85183595],\n",
-       "       [0.89206466],\n",
-       "       [0.90063467],\n",
-       "       [0.76457134],\n",
-       "       [0.90238219],\n",
-       "       [0.88993878],\n",
-       "       [0.53824407],\n",
-       "       [0.80553728],\n",
-       "       [0.93878719],\n",
-       "       [0.80699467],\n",
-       "       [0.90638457],\n",
-       "       [0.71819345],\n",
-       "       [0.78233122],\n",
-       "       [0.90379818],\n",
-       "       [0.94365129],\n",
-       "       [0.8446775 ],\n",
-       "       [0.91254098],\n",
-       "       [0.95223372],\n",
-       "       [0.93875737],\n",
-       "       [0.85748222],\n",
-       "       [0.93633913],\n",
-       "       [0.66225457],\n",
-       "       [0.96877579],\n",
-       "       [0.61726009],\n",
-       "       [0.64486449],\n",
-       "       [0.77541962],\n",
-       "       [0.5902119 ],\n",
-       "       [0.77055236],\n",
-       "       [0.40226557],\n",
-       "       [0.93228482],\n",
-       "       [0.93387969],\n",
-       "       [0.31864149],\n",
-       "       [0.69405384],\n",
-       "       [0.90393546],\n",
-       "       [0.73302707]])"
+       "array([[8.58370231e-01],\n",
+       "       [7.53460162e-01],\n",
+       "       [3.65674858e-03],\n",
+       "       [1.31189799e-01],\n",
+       "       [9.01388990e-01],\n",
+       "       [2.20218815e-01],\n",
+       "       [3.58546188e-02],\n",
+       "       [8.04688020e-01],\n",
+       "       [2.85937228e-02],\n",
+       "       [8.48894504e-01],\n",
+       "       [1.70101874e-02],\n",
+       "       [8.24579448e-01],\n",
+       "       [1.00953407e-02],\n",
+       "       [1.19695087e-02],\n",
+       "       [5.86883288e-01],\n",
+       "       [9.22435345e-01],\n",
+       "       [9.79797646e-01],\n",
+       "       [2.40720872e-02],\n",
+       "       [7.31122899e-01],\n",
+       "       [5.59753423e-01],\n",
+       "       [1.99573069e-02],\n",
+       "       [1.98065229e-02],\n",
+       "       [2.74693350e-01],\n",
+       "       [3.38999273e-03],\n",
+       "       [9.03634713e-01],\n",
+       "       [1.53987702e-02],\n",
+       "       [8.74965569e-01],\n",
+       "       [3.15779429e-03],\n",
+       "       [2.68958480e-02],\n",
+       "       [5.48947781e-01],\n",
+       "       [9.62842863e-01],\n",
+       "       [2.02845210e-02],\n",
+       "       [6.34247088e-01],\n",
+       "       [9.63169610e-01],\n",
+       "       [2.52673846e-01],\n",
+       "       [8.96584154e-02],\n",
+       "       [7.20837874e-01],\n",
+       "       [3.54677610e-01],\n",
+       "       [2.58936623e-01],\n",
+       "       [4.34747933e-01],\n",
+       "       [6.17299378e-02],\n",
+       "       [1.72264012e-02],\n",
+       "       [5.82659317e-04],\n",
+       "       [8.55703276e-02],\n",
+       "       [1.36942467e-01],\n",
+       "       [7.18003880e-01],\n",
+       "       [9.51606560e-01],\n",
+       "       [9.50770751e-01],\n",
+       "       [3.88419101e-03],\n",
+       "       [4.41201588e-03],\n",
+       "       [9.09321011e-01],\n",
+       "       [5.30479423e-01],\n",
+       "       [9.86951833e-03],\n",
+       "       [1.59200240e-02],\n",
+       "       [5.49768581e-01],\n",
+       "       [1.89337268e-02],\n",
+       "       [4.33626505e-01],\n",
+       "       [7.60627869e-01],\n",
+       "       [8.78551075e-01],\n",
+       "       [9.83540340e-01],\n",
+       "       [5.46700752e-01],\n",
+       "       [7.23309918e-02],\n",
+       "       [3.04553347e-03],\n",
+       "       [8.39398322e-01],\n",
+       "       [5.32459920e-03],\n",
+       "       [2.24801002e-01],\n",
+       "       [2.64923925e-02],\n",
+       "       [3.23589910e-01],\n",
+       "       [8.48001676e-01],\n",
+       "       [1.30404806e-01],\n",
+       "       [9.64144918e-02],\n",
+       "       [8.94304904e-01],\n",
+       "       [8.88549746e-01],\n",
+       "       [4.35740983e-02],\n",
+       "       [1.05317306e-01],\n",
+       "       [2.49571694e-02],\n",
+       "       [4.58936123e-01],\n",
+       "       [7.24856990e-01],\n",
+       "       [3.03453091e-02],\n",
+       "       [1.60681804e-02],\n",
+       "       [1.78143169e-01],\n",
+       "       [5.15149631e-02],\n",
+       "       [2.84471501e-03],\n",
+       "       [4.51304790e-02],\n",
+       "       [7.24345320e-02],\n",
+       "       [8.03390109e-03],\n",
+       "       [9.29935289e-01],\n",
+       "       [1.83930501e-02],\n",
+       "       [7.60382139e-01],\n",
+       "       [9.11318220e-01],\n",
+       "       [7.73324400e-01],\n",
+       "       [9.57659064e-01],\n",
+       "       [3.55241834e-01],\n",
+       "       [9.31472685e-01],\n",
+       "       [1.17826014e-01],\n",
+       "       [1.38213932e-03],\n",
+       "       [9.77145697e-01],\n",
+       "       [9.07924306e-01],\n",
+       "       [9.01302674e-03],\n",
+       "       [3.70249411e-01]])"
       ]
      },
-     "execution_count": 19,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -311,19 +311,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": 47,
    "id": "49b43e89-9b00-452f-b37c-782250789a21",
    "metadata": {},
    "outputs": [],
    "source": [
     "def log_loss(A, y):\n",
-    "    L = (1/len(y)) * np.sum(-y * np.log(A) - (1-y) * np.log(1-A))\n",
+    "    L = (-1/len(y)) * np.sum(y * np.log(A) + (1-y) * np.log(1-A))\n",
     "    return L"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 48,
    "id": "1a532dde-f864-4c06-af3d-5777df93669b",
    "metadata": {},
    "outputs": [],
@@ -333,17 +333,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 49,
    "id": "233df620-8c39-47a2-8ce8-cb0c6ed9d09c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "1.5471000139152558"
+       "0.2481735174871172"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 49,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -364,6 +364,14 @@
    "cell_type": "code",
    "execution_count": null,
    "id": "e7ad3092-0104-4365-b090-5e3cea72fb3b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "1a5bee12-3724-4e1e-92c8-dff73ce42e58",
    "metadata": {},
    "outputs": [],
    "source": []
