definition des gradients

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -353,20 +353,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4abdb39b-6831-4c34-ae3d-ec66b1c3d02c",
+   "cell_type": "markdown",
+   "id": "da80c2b2-771f-4805-aaf6-d31441e839a5",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "source": [
+    "## Les Gradients de Notre Modèle\n",
+    "![image](gradients.png)"
+   ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 50,
    "id": "e7ad3092-0104-4365-b090-5e3cea72fb3b",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "def gradients(X, A, y):\n",
+    "    dw = (1 / len(y)) * np.dot(X.T, (A-y))\n",
+    "    db = (1 / len(y)) * np.sum( A - y )\n",
+    "    \n",
+    "    return (dw, db)"
+   ]
   },
   {
    "cell_type": "code",
