test des gradients

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -376,12 +376,23 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "e5f97d24-9afe-4eeb-8ae3-018044578724",
+   "metadata": {},
+   "source": [
+    "## Testons les Gradients"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": null,
-   "id": "1a5bee12-3724-4e1e-92c8-dff73ce42e58",
+   "id": "88e4e373-db5a-4fb6-bdc3-ea1a30e1a938",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "dw, db = gradients(X, A, y)\n",
+    "print(f'Shape de dw: {dw}')"
+   ]
   }
  ],
  "metadata": {
