python/update.png

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -385,13 +385,54 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 52,
    "id": "88e4e373-db5a-4fb6-bdc3-ea1a30e1a938",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Shape de dw: (2, 1)\n",
+      "db: -0.1065889058374197\n"
+     ]
+    }
+   ],
+   "source": [
+    "dw, db = gradients(X, A, y)\n",
+    "print(f'Shape de dw: {dw.shape}\\ndb: {db}')"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 53,
+   "id": "35cc159b-74cb-4cb0-b85d-bda0acbb7467",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "array([[-0.15614589],\n",
+       "       [-0.13558757]])"
+      ]
+     },
+     "execution_count": 53,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "dw"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4641a2b4-1afb-4e57-90cf-e97402575921",
    "metadata": {},
    "outputs": [],
    "source": [
-    "dw, db = gradients(X, A, y)\n",
-    "print(f'Shape de dw: {dw}')"
+    "##"
    ]
   }
  ],
