mise à jour des gradients

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -426,14 +426,36 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "efbbe2ec-405b-4c08-ac3e-33ff82a69531",
+   "metadata": {},
+   "source": [
+    "## Mise à Jour des Gradients\n",
+    "\n",
+    "![image](update.png)"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "4641a2b4-1afb-4e57-90cf-e97402575921",
+   "execution_count": 54,
+   "id": "b35b108a-1ce0-4fce-a33c-20d844e6bc1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "##"
+    "def update(dw, db, b, learning_rate):\n",
+    "    w = w + learning_rate * dw\n",
+    "    b = b + learning_rate * db\n",
+    "    \n",
+    "    return (w, b)"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2c072a94-b2d8-44fa-8d1d-e37bcf1c1743",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
