--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 1,
    "id": "0f9be449-d291-4e0b-bf62-58cfbceb59c8",
    "metadata": {},
    "outputs": [],
@@ -31,7 +31,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 41,
+   "execution_count": 2,
    "id": "9993b8d0-667d-4626-b943-0f8063856e0b",
    "metadata": {},
    "outputs": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 3,
    "id": "2563343d-174d-42e1-af7c-aa2027a5f9f8",
    "metadata": {},
    "outputs": [],
@@ -98,7 +98,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 23,
    "id": "79fd44eb-99e4-47ff-96b7-d874da91f3e1",
    "metadata": {},
    "outputs": [
@@ -108,9 +108,9 @@
      "text": [
       "La taille de w: (2, 1)\n",
       "La taille de b: (1,)\n",
-      "w: [[ 0.86750878]\n",
-      " [-1.23279015]]\n",
-      "b:[0.89651975]\n"
+      "w: [[-0.87318262]\n",
+      " [-0.18971807]]\n",
+      "b:[-0.76934119]\n"
      ]
     }
    ],
@@ -141,7 +141,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 24,
    "id": "b6e54792-f2a6-42ca-9b48-0f884f3bb989",
    "metadata": {},
    "outputs": [],
@@ -152,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 25,
    "id": "78fceb89-321b-4ee0-816f-70c9290f290f",
    "metadata": {},
    "outputs": [],
@@ -173,7 +173,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 26,
    "id": "40258df5-126e-48dd-ab71-2e00db441d8e",
    "metadata": {},
    "outputs": [
@@ -183,121 +183,11 @@
      "text": [
       "Shape de A: (100, 1)\n"
      ]
-    },
-    {
-     "data": {
-      "text/plain": [
-       "array([[8.58370231e-01],\n",
-       "       [7.53460162e-01],\n",
-       "       [3.65674858e-03],\n",
-       "       [1.31189799e-01],\n",
-       "       [9.01388990e-01],\n",
-       "       [2.20218815e-01],\n",
-       "       [3.58546188e-02],\n",
-       "       [8.04688020e-01],\n",
-       "       [2.85937228e-02],\n",
-       "       [8.48894504e-01],\n",
-       "       [1.70101874e-02],\n",
-       "       [8.24579448e-01],\n",
-       "       [1.00953407e-02],\n",
-       "       [1.19695087e-02],\n",
-       "       [5.86883288e-01],\n",
-       "       [9.22435345e-01],\n",
-       "       [9.79797646e-01],\n",
-       "       [2.40720872e-02],\n",
-       "       [7.31122899e-01],\n",
-       "       [5.59753423e-01],\n",
-       "       [1.99573069e-02],\n",
-       "       [1.98065229e-02],\n",
-       "       [2.74693350e-01],\n",
-       "       [3.38999273e-03],\n",
-       "       [9.03634713e-01],\n",
-       "       [1.53987702e-02],\n",
-       "       [8.74965569e-01],\n",
-       "       [3.15779429e-03],\n",
-       "       [2.68958480e-02],\n",
-       "       [5.48947781e-01],\n",
-       "       [9.62842863e-01],\n",
-       "       [2.02845210e-02],\n",
-       "       [6.34247088e-01],\n",
-       "       [9.63169610e-01],\n",
-       "       [2.52673846e-01],\n",
-       "       [8.96584154e-02],\n",
-       "       [7.20837874e-01],\n",
-       "       [3.54677610e-01],\n",
-       "       [2.58936623e-01],\n",
-       "       [4.34747933e-01],\n",
-       "       [6.17299378e-02],\n",
-       "       [1.72264012e-02],\n",
-       "       [5.82659317e-04],\n",
-       "       [8.55703276e-02],\n",
-       "       [1.36942467e-01],\n",
-       "       [7.18003880e-01],\n",
-       "       [9.51606560e-01],\n",
-       "       [9.50770751e-01],\n",
-       "       [3.88419101e-03],\n",
-       "       [4.41201588e-03],\n",
-       "       [9.09321011e-01],\n",
-       "       [5.30479423e-01],\n",
-       "       [9.86951833e-03],\n",
-       "       [1.59200240e-02],\n",
-       "       [5.49768581e-01],\n",
-       "       [1.89337268e-02],\n",
-       "       [4.33626505e-01],\n",
-       "       [7.60627869e-01],\n",
-       "       [8.78551075e-01],\n",
-       "       [9.83540340e-01],\n",
-       "       [5.46700752e-01],\n",
-       "       [7.23309918e-02],\n",
-       "       [3.04553347e-03],\n",
-       "       [8.39398322e-01],\n",
-       "       [5.32459920e-03],\n",
-       "       [2.24801002e-01],\n",
-       "       [2.64923925e-02],\n",
-       "       [3.23589910e-01],\n",
-       "       [8.48001676e-01],\n",
-       "       [1.30404806e-01],\n",
-       "       [9.64144918e-02],\n",
-       "       [8.94304904e-01],\n",
-       "       [8.88549746e-01],\n",
-       "       [4.35740983e-02],\n",
-       "       [1.05317306e-01],\n",
-       "       [2.49571694e-02],\n",
-       "       [4.58936123e-01],\n",
-       "       [7.24856990e-01],\n",
-       "       [3.03453091e-02],\n",
-       "       [1.60681804e-02],\n",
-       "       [1.78143169e-01],\n",
-       "       [5.15149631e-02],\n",
-       "       [2.84471501e-03],\n",
-       "       [4.51304790e-02],\n",
-       "       [7.24345320e-02],\n",
-       "       [8.03390109e-03],\n",
-       "       [9.29935289e-01],\n",
-       "       [1.83930501e-02],\n",
-       "       [7.60382139e-01],\n",
-       "       [9.11318220e-01],\n",
-       "       [7.73324400e-01],\n",
-       "       [9.57659064e-01],\n",
-       "       [3.55241834e-01],\n",
-       "       [9.31472685e-01],\n",
-       "       [1.17826014e-01],\n",
-       "       [1.38213932e-03],\n",
-       "       [9.77145697e-01],\n",
-       "       [9.07924306e-01],\n",
-       "       [9.01302674e-03],\n",
-       "       [3.70249411e-01]])"
-      ]
-     },
-     "execution_count": 46,
-     "metadata": {},
-     "output_type": "execute_result"
     }
    ],
    "source": [
-    "A = model(X, w, b)\n",
-    "print(f'Shape de A: {A.shape}')\n",
-    "A"
+    "A = model(X, w_, b_)\n",
+    "print(f'Shape de A: {A.shape}')"
    ]
   },
   {
@@ -311,7 +201,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 27,
    "id": "49b43e89-9b00-452f-b37c-782250789a21",
    "metadata": {},
    "outputs": [],
@@ -323,7 +213,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 28,
    "id": "1a532dde-f864-4c06-af3d-5777df93669b",
    "metadata": {},
    "outputs": [],
@@ -333,17 +223,17 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 11,
    "id": "233df620-8c39-47a2-8ce8-cb0c6ed9d09c",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "0.2481735174871172"
+       "0.993595213160438"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -363,7 +253,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 12,
    "id": "e7ad3092-0104-4365-b090-5e3cea72fb3b",
    "metadata": {},
    "outputs": [],
@@ -385,7 +275,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 13,
    "id": "88e4e373-db5a-4fb6-bdc3-ea1a30e1a938",
    "metadata": {},
    "outputs": [
@@ -394,7 +284,7 @@
      "output_type": "stream",
      "text": [
       "Shape de dw: (2, 1)\n",
-      "db: -0.1065889058374197\n"
+      "db: -0.1555152164764203\n"
      ]
     }
    ],
@@ -405,18 +295,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 14,
    "id": "35cc159b-74cb-4cb0-b85d-bda0acbb7467",
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "array([[-0.15614589],\n",
-       "       [-0.13558757]])"
+       "array([[-0.6312163 ],\n",
+       "       [ 0.56749497]])"
       ]
      },
-     "execution_count": 53,
+     "execution_count": 32,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -437,22 +327,52 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 35,
    "id": "b35b108a-1ce0-4fce-a33c-20d844e6bc1a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "def update(dw, db, b, learning_rate):\n",
+    "def update(dw, db, w, b, learning_rate):\n",
     "    w = w + learning_rate * dw\n",
     "    b = b + learning_rate * db\n",
-    "    \n",
     "    return (w, b)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "22c35050-913c-4e8f-b5fc-d5d415929a7d",
+   "metadata": {},
+   "source": [
+    "## Testons la Mise à Jour des Gradients"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "2c072a94-b2d8-44fa-8d1d-e37bcf1c1743",
+   "id": "593ea021-682c-4cb7-96f1-c59e2f09f549",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "UnboundLocalError",
+     "evalue": "local variable 'w' referenced before assignment",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-21-107b48efb343>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.01\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;32m<ipython-input-20-66b55c70373f>\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(dw, db, b, learning_rate)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mdw\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
+      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'w' referenced before assignment"
+     ]
+    }
+   ],
+   "source": [
+    "update(dw, db, , 0.01)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "3dc529a2-2162-4632-abd5-b5cf5a530d18",
    "metadata": {},
    "outputs": [],
    "source": []
