entrainement du modèle

--- a/python/reseau_de_neurone_artificiel.ipynb
+++ b/python/reseau_de_neurone_artificiel.ipynb
@@ -348,31 +348,71 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 40,
    "id": "593ea021-682c-4cb7-96f1-c59e2f09f549",
    "metadata": {},
    "outputs": [
     {
-     "ename": "UnboundLocalError",
-     "evalue": "local variable 'w' referenced before assignment",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[1;31mUnboundLocalError\u001b[0m                         Traceback (most recent call last)",
-      "\u001b[1;32m<ipython-input-21-107b48efb343>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.5\u001b[0m\u001b[1;33m,\u001b[0m \u001b[1;36m0.01\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
-      "\u001b[1;32m<ipython-input-20-66b55c70373f>\u001b[0m in \u001b[0;36mupdate\u001b[1;34m(dw, db, b, learning_rate)\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[1;32mdef\u001b[0m \u001b[0mupdate\u001b[0m\u001b[1;33m(\u001b[0m\u001b[0mdw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mlearning_rate\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m:\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[1;32m----> 2\u001b[1;33m     \u001b[0mw\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mw\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mdw\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m\u001b[0;32m      3\u001b[0m     \u001b[0mb\u001b[0m \u001b[1;33m=\u001b[0m \u001b[0mb\u001b[0m \u001b[1;33m+\u001b[0m \u001b[0mlearning_rate\u001b[0m \u001b[1;33m*\u001b[0m \u001b[0mdb\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0;32m      4\u001b[0m     \u001b[1;32mreturn\u001b[0m \u001b[1;33m(\u001b[0m\u001b[0mw\u001b[0m\u001b[1;33m,\u001b[0m \u001b[0mb\u001b[0m\u001b[1;33m)\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n",
-      "\u001b[1;31mUnboundLocalError\u001b[0m: local variable 'w' referenced before assignment"
-     ]
+     "data": {
+      "text/plain": [
+       "(array([[-0.90474343],\n",
+       "        [-0.16134332]]),\n",
+       " array([-0.77711695]))"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
-    "update(dw, db, , 0.01)"
+    "update(dw, db, w, b, 0.05)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "57450b09-e12c-4316-b734-d676ebef1b35",
+   "metadata": {},
+   "source": [
+    "## Entrainement du Modèle\n",
+    "![image](train_cnn.png)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 41,
+   "id": "5222e7c6-6f38-447e-8814-3f150fe55ca0",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def train_custom_cnn(X, y, learning = 0.1, epoch=100):\n",
+    "    # Initialisation des paramètres\n",
+    "    w, b = initialisation(X)\n",
+    "    \n",
+    "    ## Les erreurs\n",
+    "    loss = []\n",
+    "    # nombre d'iteration pour l'apprentissage\n",
+    "    for i in range(epoch):\n",
+    "        \n",
+    "        # Foward propagation\n",
+    "        A = model(X, w, b)\n",
+    "        \n",
+    "        # Les pertes et la fonction coût\n",
+    "        loss.append(log_loss(A, y))\n",
+    "        \n",
+    "        # Le calcul des gradients\n",
+    "        dw, db = gradients(A, X, y)\n",
+    "        \n",
+    "        # Mise à des erreurs pour ameliorer les performance du modèle\n",
+    "        w, b = update(dw, db, w, b, learning)\n",
+    "        \n",
+    "    return loss"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "3dc529a2-2162-4632-abd5-b5cf5a530d18",
+   "id": "3cec7271-f01d-4059-9c4b-a3d8aa18e3d6",
    "metadata": {},
    "outputs": [],
    "source": []
