création du dataset

--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "fa95e674",
+   "id": "b389e5b6",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f2acbc1d",
+   "id": "c2f3fcc5",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "28c84577",
+   "id": "baa1c3ac",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -33,12 +33,33 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "c3b79368",
+   "metadata": {},
+   "source": [
+    "## Création du dataset"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5950d48b",
+   "execution_count": 4,
+   "id": "0a7e22ad",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "(X_train, y_train), (X_test, y_test) = keras.datasets.fashion_mnist.load_data()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "5681c834",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "print(f'Taille des données d\\'entrainement: {X_train.shape}')\n",
+    "print(f'Taille des données de teste: {X_.shape}')"
+   ]
   }
  ],
  "metadata": {
