création du modèle

--- a/python/fashion_mnist.ipynb
+++ b/python/fashion_mnist.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "markdown",
-   "id": "b389e5b6",
+   "id": "7a08efeb",
    "metadata": {},
    "source": [
     "# L'analyse du dataset mnist en tensorflow "
@@ -10,7 +10,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c2f3fcc5",
+   "id": "684d9c4d",
    "metadata": {},
    "source": [
     "## Importataion des packages"
@@ -19,7 +19,7 @@
   {
    "cell_type": "code",
    "execution_count": 2,
-   "id": "baa1c3ac",
+   "id": "7f6dd399",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -34,7 +34,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "c3b79368",
+   "id": "9bacc472",
    "metadata": {},
    "source": [
     "## Création du dataset"
@@ -43,7 +43,7 @@
   {
    "cell_type": "code",
    "execution_count": 4,
-   "id": "0a7e22ad",
+   "id": "a0f0ae0e",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -52,14 +52,81 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "id": "5681c834",
+   "execution_count": 5,
+   "id": "ed357f74",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Taille des données d'entrainement: (60000, 28, 28)\n",
+      "Taille des données de teste: (10000, 28, 28)\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(f'Taille des données d\\'entrainement: {X_train.shape}')\n",
+    "print(f'Taille des données de teste: {X_test.shape}')"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "39afa2e1",
+   "metadata": {},
+   "source": [
+    "## Création du modèle"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 12,
+   "id": "8e5d072e",
    "metadata": {},
    "outputs": [],
    "source": [
-    "print(f'Taille des données d\\'entrainement: {X_train.shape}')\n",
-    "print(f'Taille des données de teste: {X_.shape}')"
+    "modele = keras.Sequential(\n",
+    " [\n",
+    "     keras.layers.Flatten(input_shape=(X_train.shape[1], X_train.shape[2])),\n",
+    "     keras.layers.Dense(units = 128, activation = tf.nn.relu),\n",
+    "     keras.layers.Dense(10, activation = tf.nn.softmax )\n",
+    " ]\n",
+    ")\n",
+    "\n",
+    "modele.compile(\n",
+    "    optimizer = 'adam',\n",
+    "    loss = 'sparse_categorical_crossentropy',\n",
+    "    metrics = ['accuracy']\n",
+    ")"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 8,
+   "id": "67ffcb64",
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "AttributeError",
+     "evalue": "module 'tensorflow._api.v2.train' has no attribute 'meanSquaredError'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m                            Traceback (most recent call last)",
+      "\u001b[1;32m<ipython-input-8-cf108e764dd9>\u001b[0m in \u001b[0;36m<module>\u001b[1;34m\u001b[0m\n\u001b[1;32m----> 1\u001b[1;33m \u001b[0mtf\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mtrain\u001b[0m\u001b[1;33m.\u001b[0m\u001b[0mmeanSquaredError\u001b[0m\u001b[1;33m\u001b[0m\u001b[1;33m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[1;31mAttributeError\u001b[0m: module 'tensorflow._api.v2.train' has no attribute 'meanSquaredError'"
+     ]
+    }
+   ],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "04b13502",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
